# hyper

./: README.md  dune-project
_build/: log
c++/: CMakeLists.txt
c++/include/: arena.hpp  categorical_combinators.hpp  datatypes.hpp  lens_combinators.hpp  monoidal.hpp  operads.hpp  pickler_combinators.hpp  poly.hpp  program_generation.hpp  strategy_combinators.hpp  unification.hpp  visitor_combinators.hpp
c++/include/kan/: codensity.hpp  coyoneda.hpp  coyoneda_presheaf.hpp  day.hpp  density.hpp  invar_day.hpp  lan.hpp  left_adjoint.hpp  lift.hpp  ran.hpp  rift.hpp  yoneda.hpp
c++/include/ppc/: match.hpp  metasyntax.hpp  rule.hpp  specification.hpp  template.hpp
c++/src/vectorize/: BlockBuilder.cpp  BlockBuilder.hpp  ConsecutiveCheck.cpp  ConsecutiveCheck.hpp  DependenceAnalysis.cpp  DependenceAnalysis.hpp  Heuristic.cpp  Heuristic.hpp  IRVec.hpp  InstSema.hpp  IntrinsicBuilder.cpp  LoopAwareRPO.cpp  LoopUnrolling.cpp  LoopUnrolling.hpp  Scalarizer.cpp  VLoop.hpp  VectorPack.cpp  VectorPack.hpp
c++/test/: test_s.cpp
efficient_go/: s.go  strategy_combinators.go  test_s.go
efficient_haskell/: efficient-haskell.cabal
efficient_idris/: strategy_combinators.idr
efficient_python/: parsec.py
efficient_rust/: Cargo.toml
go/: arena.go  categorical_combinators.go  datatypes.go  go.mod  lens_combinators.go  monoidal.go  operads.go  parsec.go  pickler_combinators.go  poly.go  program_generation.go  unification.go  visitor_combinators.go
haskell/: CHANGELOG.md
idris/: arena.idr  categorical_combinators.idr  datatypes.idr  lens_combinators.idr  monoidal.idr  (+9 more)
(+302 files in other folders)
